--- a/Cordova Workshop/www/css/index.css
+++ b/Cordova Workshop/www/css/index.css
@@ -27,7 +27,6 @@ body {
     -webkit-text-size-adjust: none;             /* prevent webkit from resizing text to fit */
     -webkit-user-select: none;                  /* prevent copy paste, to allow, change 'none' to 'text' */
     background-color:#E4E4E4;
-    background-attachment:fixed;
     font-family:'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
     font-size:12px;
     height:100%;
@@ -227,6 +226,9 @@ h1 {
         width: 10em;
         padding: 5em 5em;
     }
+    .button p{
+        font-size: 2em;
+    }
     h1 {
         margin-top: 0.5em;
         font-size:7em;
@@ -242,10 +244,13 @@ h1 {
         left: 25%;
         margin-top: 10%;
     }
-  .button{
+    .button{
         height: 8em;
         width: 8em;
         padding: 4em 4em;
+    }
+    .button p{
+        font-size: 1.5em;
     }
     h1 {
         margin-top: 0.5em;
@@ -260,6 +265,9 @@ h1 {
 @media (min-width: 641px) and (max-width: 908px){
     .buttonContainer{
         margin-right: 30%;
+    }
+    .button p{
+        font-size: 1.25em;
     }
 }
 /* iPhone <= 5*/
